Add two projects, improve cascade style sheet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title> RodrigoCastiel at github.io </title>
-  <link href="style.css" rel="stylesheet" type="text/css"/>
+  <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="page-wrapper"> 
@@ -37,7 +37,7 @@
 
             <p> I'm interested in Computer Graphics, Digital Image Processing and software development. Recently I've been working on real-time physically-based animation, real-time graphics with OpenGL 4.0, and nonlinear optimization problem modeling. </p>
 
-            <p> I'm fluent in C/C++, MATLAB and Python; I can also do some webdesign (HTML5 + CSS3 + Javascript). I've been coding for 5+ years, since I taught myself the C language in high-school. Even though I have a strong experience in implementing advanced numerical methods in C++, I learned lots of different programming languages, so I'm very open to study and practice even more. </p>
+            <p> I'm fluent in C/C++, MATLAB and Python; I can also do some webdesign (HTML5 + CSS3 + Javascript). I've been coding for 5+ years, since I taught myself the C language in high-school. Even though I have a strong experience in implementing advanced numerical methods in C++, I learned lots of different programming languages during my major, so I'm very open to study and practice even more. </p>
 
             <p> In my freetime, I usually work on some <a href="https://github.com/RodrigoCastiel"> personal coding projects </a> or play the <a href="https://www.youtube.com/watch?v=WycgYk0Wc-4"> piano. </a> </p>
 
@@ -50,25 +50,14 @@
           </div>
         </div>
       </div>
-
-      <!-- Resize image to fit in div -->
-      <script type="text/javascript">
-      (function() {
-        var img = document.getElementById("profile-pic");
-        img.onload = function() {
-            var div_height = document.getElementById("presentation-div").clientHeight;
-            var aspect = img.width/img.height;
-            var fraction = 0.8;
-            img.height = div_height * fraction;
-            img.width = aspect * img.height;
-            img.style.marginTop = Math.floor(div_height * (1-fraction) / 2).toString().concat("px");
-        };
-      }());
-      </script>
-
     </div>
 
     <div class="content-divider"></div>
+
+    <div class="content-block">
+      <iframe src="http://rodrigocastiel.github.io/WebPhysics/main.html" width="100%" height="600"></iframe>
+    </div>
+
     <br>
     <br>
     <br>
