Add two projects

--- a/projects.html
+++ b/projects.html
@@ -20,13 +20,69 @@
     </div>
 
     <div class="content-block">
-      <p align="center"> <b> Under development... </b> </p>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
+      <div class="project-content">
+        <table>
+          <tr>
+            <td> <img src="imgs/raytracer-proj.jpg"> </td>
+            <td>
+              <div class="text"> 
+                <h2> <a href="https://github.com/RodrigoCastiel/RayTracer/"> Ray Tracer in C++ </a> </h2>
+                <small> March 2016 </small> 
+
+                <p> This a is course project for <a href="http://www-bcf.usc.edu/~jbarbic/cs420-s16/"> CSCI 420 - Computer Graphics </a> at USC. Given an input scene that specifies a list of triangles and spheres, it renders and generates .jpg pictures to the disk.
+                I added a lot of extra features, including:
+
+                <ul>
+                  <li> Adaptive anti-aliasing and multi-threading implementation </li>
+                  <li> Reflection and refraction using Snell's Law and Fresnel's Equations </li>
+                  <li> Custom camera positioning and simple 3D-model loader </li>
+                  <li> Settable material propeties for both spheres and triangles </li>
+                </ul>
+                </p> 
+
+                <p> For more information, please check this project on <a href="https://github.com/RodrigoCastiel/RayTracer/"> GitHub</a>. If you just want to see some pretty pictures, click <a href="https://github.com/RodrigoCastiel/RayTracer/tree/master/pictures"> here</a>. </p>
+              </div>
+            </td>
+          </tr>
+        </table>
+      </div>
     </div>
+
+    <div class="content-divider"> </div>
+
+    <div class="content-block">
+      <div class="project-content">
+        <table>
+          <tr>
+            <td> <img src="imgs/webphysics-proj.png" width="347"> </td>
+            <td>
+              <div class="text"> 
+                <h2> <a href="https://github.com/RodrigoCastiel/Webphysics/"> Webphysics in Javascript </a> </h2>
+                <small> Dec 2015 </small> 
+
+                <p> This is a 2D-physics simulator coded in HTML5 and Javascript. I developed this on 2015 Winter Break for fun. It runs well on Chrome browsers, but it was not tested on other browsers. 
+                The main features are:
+                </p>
+
+                <ul>
+                  <li> Six interaction modes </li>
+                  <li> Add particles with custom mass, velocity and position </li>
+                  <li> Connect particles with springs and dampers </li>
+                  <li> Create and connect realistic springs to other springs or particles </li>
+                  <li> [UNDER DEVELOPMENT] Elastic clothing simulation </li>
+                </ul>
+                </p> 
+
+
+                <p> If you want to play it online, click <a href="http://rodrigocastiel.github.io/WebPhysics/main.html">here</a>. You can also check the project page on <a href="http://rodrigocastiel.github.io/WebPhysics/"> GitHub</a>. </p>
+              </div>
+            </td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+    <div class="content-divider"> </div>
 
     <footer class="page-footer">
       <small>© Copyright 2016, Rodrigo Castiel</small>
