Add more projects to projects.html

--- a/index.html
+++ b/index.html
@@ -21,42 +21,50 @@
 
     <div class="content-block"> 
       <div id="presentation-div" class="presentation-block">
-        <div class="picture"> <img id="profile-pic" src="imgs/profile.png"> </div>
-        <div class="presentation-content">
-          <div class="content-presentation-top">
-            <h2 id="my-name"> Rodrigo Castiel </h2>
-          </div>
 
-          <div class="content-presentation-bottom">            
-            <small> email: rcrs2 (at) cin.ufpe.br </small> - <small> castielr (at) usc.edu </small> 
-            <p> Computer Engineering undergraduate student at
-            <a href="http://www2.cin.ufpe.br/site/index.php"> Center for Informatics (CIn) </a>, Recife, Brazil. <br>
-            Former Computer Science exchange student at
-            <a href="http://www2.cin.ufpe.br/site/index.php"> University of Southern California </a>, Los Angeles.
-            </p>
+        <table>
+          <tr> 
+            <td> 
+              <div class="picture"> <img id="profile-pic" src="imgs/profile.png"> </div>
+            </td> 
 
-            <p> I'm interested in Computer Graphics, Digital Image Processing and software development. Recently I've been working on real-time physically-based animation, real-time graphics with OpenGL 4.0, and nonlinear optimization problem modeling. </p>
+            <td>
+              <div class="presentation-content">
+                <div class="content-presentation-top">
+                  <h2 id="my-name"> Rodrigo Castiel </h2>
+                </div>
 
-            <p> I'm fluent in C/C++, MATLAB and Python; I can also do some webdesign (HTML5 + CSS3 + Javascript). I've been coding for 5+ years, since I taught myself the C language in high-school. Even though I have a strong experience in implementing advanced numerical methods in C++, I learned lots of different programming languages during my major, so I'm very open to study and practice even more. </p>
+                <div class="content-presentation-bottom">            
+                  <small> email: rcrs2 (at) cin.ufpe.br </small> - <small> castielr (at) usc.edu </small> 
+                  <p> Computer Engineering undergraduate student at
+                  <a href="http://www2.cin.ufpe.br/site/index.php"> Center for Informatics (CIn) </a>, Recife, Brazil. <br>
+                  Former Computer Science exchange student at
+                  <a href="http://www2.cin.ufpe.br/site/index.php"> University of Southern California </a>, Los Angeles.
+                  </p>
 
-            <p> In my freetime, I usually work on some <a href="https://github.com/RodrigoCastiel"> personal coding projects </a> or play the <a href="https://www.youtube.com/watch?v=WycgYk0Wc-4"> piano. </a> </p>
+                  <p> I'm interested in Computer Graphics, Digital Image Processing and software development. Recently I've been working on real-time physically-based animation, real-time graphics with OpenGL 4.0, and nonlinear optimization problem modeling. </p>
 
-            <p> You are very welcome to visit me on: </p>
-            <ul>
-              <li> <a href="https://github.com/RodrigoCastiel" class="ext-social-network"> <img src="imgs/GitHub_Logo.png"> </a> </li>
-              <li> <a href="https://www.linkedin.com/in/rodrigocastiel" class="ext-social-network"> <img src="imgs/LinkedIn_Logo.png"> </a> </li>
-              <li> <a href="https://www.youtube.com/user/rcrs2" class="ext-social-network"> <img src="imgs/YouTube_Logo.png"> </a> </li>
-            </ul>
-          </div>
-        </div>
+                  <p> I'm fluent in C/C++, MATLAB and Python; I can also do some webdesign (HTML5 + CSS3 + Javascript). I've been coding for 5+ years, since I taught myself the C language in high-school. Even though I have a strong experience in implementing advanced numerical methods in C++, I learned lots of different programming languages during my major, so I'm very open to study and practice even more. </p>
+
+                  <p> In my freetime, I usually work on some <a href="https://github.com/RodrigoCastiel"> personal coding projects </a> or play the <a href="https://www.youtube.com/watch?v=WycgYk0Wc-4"> piano. </a> </p>
+
+                  <p> You are very welcome to visit me on: </p>
+                  <ul>
+                    <li> <a href="https://github.com/RodrigoCastiel" class="ext-social-network"> <img src="imgs/GitHub_Logo.png"> </a> </li>
+                    <li> <a href="https://www.linkedin.com/in/rodrigocastiel" class="ext-social-network"> <img src="imgs/LinkedIn_Logo.png"> </a> </li>
+                    <li> <a href="https://www.youtube.com/user/rcrs2" class="ext-social-network"> <img src="imgs/YouTube_Logo.png"> </a> </li>
+                  </ul>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </table>
       </div>
     </div>
 
     <div class="content-divider"></div>
 
-    <div class="content-block">
-      <iframe src="http://rodrigocastiel.github.io/WebPhysics/main.html" width="100%" height="600"></iframe>
-    </div>
+
 
     <br>
     <br>
