Correct little english mistake

--- a/projects.html
+++ b/projects.html
@@ -157,7 +157,7 @@
                 <h2> <a href="https://github.com/RodrigoCastiel/Webphysics/"> Webphysics in Javascript </a> </h2>
                 <small> Dec 2015 </small> 
 
-                <p> This is a 2D-physics simulator coded in HTML5 and Javascript. I developed this on 2015 Winter Break for fun. It runs well on Chrome browsers, but it was not tested on other browsers. 
+                <p> This is a 2D-physics simulator coded in HTML5 and Javascript. I developed this during 2015 Winter Break for fun. It runs well on Chrome browsers, but it was not tested on other browsers. 
                 The main features are:
                 </p>
 
