--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title> RodrigoCastiel at github.io </title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <link href="profile.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   <div class="page-wrapper"> 
@@ -19,56 +20,84 @@
       <br>
     </div>
 
-    <div class="content-block"> 
-      <div id="presentation-div" class="presentation-block">
+    <div class="content-block" id="profile">
+      <table>
+        <tr class="top-row"> 
+          <td> 
+            <img src="imgs/profile.jpg"> 
+            <h2 align="center"> Rodrigo Castiel </h2> 
+            <p align="center"> email: rcrs2 (at) cin.ufpe.br </p>
+          <div class="content-divider"> </div>
+          </td>
+        </tr>
+        <tr class="bottom-row"> 
+          <td class="info-table">
+            <div class="useful-links">
+              <ul>
+                <li> <a href=""> Resume/CV </a> </li>
+                <li> | </li>
+                <li> <a href="https://www.linkedin.com/in/rodrigocastiel"> LinkedIn  </a> </li>
+                <li> | </li>
+                <li> <a href="https://github.com/RodrigoCastiel"> GitHub    </a> </li>
+              </ul>
+            </div>
 
-        <table>
-          <tr> 
-            <td> 
-              <div class="picture"> <img id="profile-pic" src="imgs/profile.png"> </div>
-            </td> 
+            <div class="main">
+              <table id="main-info">
+                <tr> 
+                  <td class="type"> Education </td>
+                  <td class="description"> 
+                    <p align="right"> 
+                    Computer Engineering undergraduate student at Federal University of Pernambuco, Recife, Brazil <br>
+                    Former Computer Science exchange student at University of Southern California, Los Angeles
+                    </p>
 
-            <td>
-              <div class="presentation-content">
-                <div class="content-presentation-top">
-                  <h2 id="my-name"> Rodrigo Castiel </h2>
-                </div>
+                  </td>
+                </tr>
 
-                <div class="content-presentation-bottom">            
-                  <small> email: rcrs2 (at) cin.ufpe.br </small> - <small> castielr (at) usc.edu </small> 
-                  <p> Computer Engineering undergraduate student at
-                  <a href="http://www2.cin.ufpe.br/site/index.php"> Center for Informatics (CIn) </a>, Recife, Brazil. <br>
-                  Former Computer Science exchange student at
-                  <a href="http://www2.cin.ufpe.br/site/index.php"> University of Southern California </a>, Los Angeles.
-                  </p>
+                <tr> 
+                  <td class="type"> Interests </td>
+                  <td class="description"> 
+                    <p> Computer Graphics, Image Processing, Software Development (including mobile) </p> 
+                  </td>
+                </tr>
 
-                  <p> I'm interested in Computer Graphics, Digital Image Processing and software development. Recently I've been working on real-time physically-based animation, real-time graphics with OpenGL 4.0, and nonlinear optimization problem modeling. </p>
+                <tr> 
+                  <td class="type"> Research </td>
+                  <td class="description"> 
+                    <p> 
+                    Physically-based animation for Computer Graphics <br>
+                    Modeling of nonlinear optimization problems <br>
+                    Shape modeling for geometric data extraction of underwater structures
+                    </p> 
+                  </td>
+                </tr>
 
-                  <p> I'm fluent in C/C++, MATLAB and Python; I can also do some webdesign (HTML5 + CSS3 + Javascript). I've been coding for 5+ years, since I taught myself the C language in high-school. Even though I have a strong experience in implementing advanced numerical methods in C++, I learned lots of different programming languages during my major, so I'm very open to study and practice even more. </p>
+                <tr> 
+                  <td class="type"> Languages </td>
+                  <td class="description">
+                    <p> Fluent C/C++11, Python and MATLAB; <br> 
+                        Intermediate HTML5, CSS and Javascript; <br>
+                        I did some Java, Lua Script and Haskell before
+                    </p>
+                  </td>
+                </tr>
+              </table>
+            </div>
 
-                  <p> In my freetime, I usually work on some <a href="https://github.com/RodrigoCastiel"> personal coding projects </a> or play the <a href="https://www.youtube.com/watch?v=WycgYk0Wc-4"> piano. </a> </p>
-
-                  <p> You are very welcome to visit me on: </p>
-                  <ul>
-                    <li> <a href="https://github.com/RodrigoCastiel" class="ext-social-network"> <img src="imgs/GitHub_Logo.png"> </a> </li>
-                    <li> <a href="https://www.linkedin.com/in/rodrigocastiel" class="ext-social-network"> <img src="imgs/LinkedIn_Logo.png"> </a> </li>
-                    <li> <a href="https://www.youtube.com/user/rcrs2" class="ext-social-network"> <img src="imgs/YouTube_Logo.png"> </a> </li>
-                  </ul>
-                </div>
-              </div>
-            </td>
-          </tr>
-        </table>
-      </div>
+          </td>
+        </tr>
+      </table>
     </div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
     <div class="content-divider"></div>
 
-
-
-    <br>
-    <br>
-    <br>
     <br>
     <br>
     <br>
@@ -82,3 +111,4 @@
 
 </body>
 </html>
+
