Add missing profile picture

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <table>
         <tr class="top-row"> 
           <td> 
-            <img src="imgs/profile.jpg"> 
+            <img src="imgs/profile-1.jpg"> 
             <h2 align="center"> Rodrigo Castiel </h2> 
             <p align="center"> email: rcrs2 (at) cin.ufpe.br </p>
           <div class="content-divider"> </div>
