--- a/research.html
+++ b/research.html
@@ -20,13 +20,77 @@
     </div>
 
     <div class="content-block">
+      <div class="experience">
+        <div class="experience-block">
+          <h2> <a href="http://gfx.usc.edu/"> Summer Intern at USC Computer Graphics Lab </a> </h2>
+          <small> May 2016 - July 2016 </small> <br>
+          <small> University of Southern California, Los Angeles, CA, United States </small> 
+
+          <p> Main Activities:
+          <ul>
+            <li> Study physically-based animation using Continuum Mechanics, Finite Element Method (FEM) and Model Reduction</li>
+            <li> Implement in C++ two state-of-arts techniques presented in the following papers: 
+              <ul>
+                <li> <a href="https://www.cs.utah.edu/~ladislav/bouaziz14projective/bouaziz14projective.pdf"> Projective Dynamics: Fusing Constraint Projections for Fast Simulation </a> </li>
+                <li> <a href="https://arxiv.org/abs/1604.07378"> Towards Real-time Simulation of Hyperelastic Materials </a> </li>
+              </ul>
+            </li>
+            <li> Conceive and evaluate new techniques for simulation of deformable objects </li>
+          </ul>
+          </p> 
+        </div>
+
+        <div class="content-divider"> </div>
+
+        <div class="experience-block">
+          <h2> <a href="http://cin.ufpe.br/~grvm"> Research Assistent at Virtual Reality and Multimedia Research Group </a> </h2>
+          <small> Aug 2016 - Nov 2016 </small> <br>
+          <small> Federal University of Pernambuco, Recife, Brazil </small> 
+          <p> Main activities:
+          <ul>
+            <li> Research on nonlinear optimization problems for computer vision applications </li>
+            <li> Research on physical modeling for real-time curvature estimation of pipes in offshore oil production </li>
+            <li> Apply Machine Learning algorithms to classify dangerous configurations of underwater oil pipes </li>
+          </ul>
+          </p> 
+        </div>
+
+      <div class="content-divider"> </div>
+        
+      <div class="experience-block">
+        <h2> <a href="http://cin.ufpe.br/~grvm"> Research Assistant at Virtual Reality and Multimedia Research Group </a> </h2>
+        <small>  May 2013 - July 2015 </small> <br>
+        <small> Federal University of Pernambuco, Recife, Brazil </small> 
+
+        <p> Main activities:
+        <ul>
+          <li> Research on nonlinear optimization problems for computer vision applications  </li>
+          <li> Research on physical modeling for real-time curvature estimation of pipes in offshore oil production </li>
+          <li> Team development in C++ of software for Brazilian oil industry </li>
+        </ul>
+        </p> 
+      </div>
+      
+      </div>
+    </div>
+
+
+    <br>
+    <br>
+
+    <div class="content-divider"> </div>
+
+    <br>
+    <br>
+
+    <!-- <div class="content-block">
       <p align="center"> <b> Under development... </b> </p>
       <br>
       <br>
       <br>
       <br>
       <br>
-    </div>
+    </div> -->
 
     <footer class="page-footer">
       <small>© Copyright 2016, Rodrigo Castiel</small>
