Add CV on main page

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <td class="info-table">
             <div class="useful-links">
               <ul>
-                <li> <a href=""> Resume/CV </a> </li>
+                <li> <a href="files/CV_RodrigoCastiel.pdf"> CV </a> </li>
                 <li> | </li>
                 <li> <a href="https://www.linkedin.com/in/rodrigocastiel"> LinkedIn  </a> </li>
                 <li> | </li>
@@ -77,7 +77,7 @@
                   <td class="type"> Languages </td>
                   <td class="description">
                     <p> Fluent C/C++11, Python and MATLAB; <br> 
-                        Intermediate HTML5, CSS and Javascript; <br>
+                        Intermediate HTML5, CSS and JavaScript; <br>
                         I did some Java, Lua Script and Haskell before
                     </p>
                   </td>
