Small update on gl-oo-interface project

--- a/projects.html
+++ b/projects.html
@@ -131,6 +131,7 @@
                 </p>
                 <ul>
                   <li> Custom mesh manipulation (automatic VBO, EBO and VAO management for user-defined attributes) </li>
+                  <li> .obj file loader (currently under development) </li>
                   <li> GLUT interface module (keyboard and mouse events) </li>
                   <li> Shader Manipulation module </li>
                   <li> Renderer module: wireframe, phong shading, normal mapping </li>
@@ -138,7 +139,8 @@
                   <li> Tools: camera, transformations, frequent meshes </li>
                 </ul>
 
-                <p> Code available on <a href="https://github.com/RodrigoCastiel/gl-oo-interface/">GitHub</a>. </p>
+                <p> Code available on <a href="https://github.com/RodrigoCastiel/gl-oo-interface/">GitHub</a> (~5.5k lines of code). 
+                </p>
               </div>
             </td>
           </tr>
