--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
           <td class="info-table">
             <div class="useful-links">
               <ul>
-                <li> <a href="files/CV_RodrigoCastiel.pdf"> CV </a> </li>
-                <li> | </li>
+                <!-- <li> <a href="files/CV_RodrigoCastiel.pdf"> CV </a> </li> Out of Date!! TODO(Rodrigo): update it!  
+                <li> | </li>-->  
                 <li> <a href="https://www.linkedin.com/in/rodrigocastiel"> LinkedIn  </a> </li>
                 <li> | </li>
                 <li> <a href="https://github.com/RodrigoCastiel"> GitHub    </a> </li>
